# website

./: .gitignore  .gitlab-ci.yml  404.html  CNAME  LICENSE  Makefile  OWNERS  README-OLD.md  README.md  RELEASE_PROCESS.md  build.sh  docker-compose.yml  docusaurus.config.ts  index.html  mkdocs.yml  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  sidebars.ts  sitemap.xml  spell-test.txt  versions.json
.github/: pull-request-template.md
0.10/: 404.html  index.html  sitemap.xml
0.11/: 404.html  index.html  sitemap.xml
0.12/: 404.html  index.html  objects.inv  sitemap.xml
0.13/: 404.html  index.html  objects.inv  sitemap.xml
0.14/: 404.html  index.html  sitemap.xml
0.15/: 404.html  index.html  sitemap.xml
0.7/: 404.html  index.html  sitemap.xml
0.8/: 404.html  index.html  sitemap.xml
0.9/: 404.html  index.html  sitemap.xml
ISSUE_TEMPLATE/: bug-in-existing-docs.md
New website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tailwind.config.js
blog/: 2021-09-27-kfserving-transition.md  2021-10-11-KServe-0.7-release.md  2022-02-18-KServe-0.8-release.md  2022-07-21-KServe-0.9-release.md  2023-02-05-KServe-0.10-release.md  2023-10-08-KServe-0.11-release.md  2024-05-15-KServe-0.13-release.md  2024-12-13-KServe-0.14-release.md  2025-05-27-KServe-0.15-release.md  2026-03-03-cloud-native-ai-inference-kserve-llm-d.md  2026-03-13-KServe-0.17-release.md  2026-04-21-production-grade-llm-inference-kserve-llm-d-vllm.md  2026-04-29-KServe-0.18-release.md  authors.yml  tags.yml
docs/: index.md  intro.md  intro.mdx
(+3145 files in other folders)
