[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["Theofilos Papapanagiotou <theofilos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.2.1"
mkdocs-material = "^7.1.8"
pymdown-extensions = "^8.2"
fontawesome-markdown = "^0.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
